# CEAA

./: CAAA Literature Review.md  CAAA-Full-Research-and-Implementation-Plan.md  README.md  pyproject.toml  requirements.txt  run_experiment.sh
configs/: config.yaml
scripts/: ablation.py  demo.py  train.py
src/: main.py
src/data_loader/: __init__.py  dataset.py  download_data.py  fault_generator.py  rcaeval_loader.py  synthetic_generator.py
src/evaluation/: metrics.py  visualization.py
src/features/: __init__.py  context_features.py  extractors.py  feature_schema.py
src/models/: __init__.py  anomaly_detector.py  baseline.py  caaa_model.py  classifier.py  feature_encoder.py
src/training/: losses.py  trainer.py
src/utils/: __init__.py
tests/: test_data_loader.py  test_features.py  test_integration.py  test_models.py  test_plan_modules.py  test_rcaeval_pipeline.py
