[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "caaa"
version = "0.1.0"
description = "Context-Aware Anomaly Attribution for Cloud Microservices"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "joblib>=1.3.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]

[tool.setuptools.packages.find]
include = ["src*"]
